--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My Basic Calc</string>
+    <string name="app_name">Botcha</string>
     <string name="menu_settings">Settings</string>
     <string name="total_cost">Your total is </string>
 	<string name="btn_1">Add 1</string>
 	<string name="btn_2">Minus 1</string>
+	<string name="splash_title">BOTCHA</string>
 </resources>
